log/greeter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
  namespace: exercises
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: greeter
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
  namespace: exercises
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: greeter
    version: v2
